# context

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md
core/python/: pyproject.toml
core/python/.context/copilot/: 115c94e4-dc59-4234-9c12-98511573b24e.md  92027c0b-a327-4def-b023-3a1345d9ff54.md  df7e52c4-e2a7-449c-9904-08334bcb4376.md  e6e6c177-877d-4c5e-ae48-731317e8b049.md
core/python/.context/logs/copilot/: 06f1adde-6f4a-4398-b27d-ebf7ac519e1f.json  0b4f4340-9d68-44e5-92ff-f321464e2093.json  0bbeb524-e146-4121-adad-ecdcdfef4c35.json  115c94e4-dc59-4234-9c12-98511573b24e.json  11d01c40-ec71-4733-aa10-a6dffa090e2f.json  1ae5c996-b364-437c-aa83-5d6934d24185.json  1cc4cd71-96c9-41d5-9eba-8600a9bfd7a2.json  2319073a-fff4-49f4-a467-7aa99293ab77.json  274ce632-7910-4f7d-a022-5cfc8c6a84a4.json  2a1d30d5-f893-4eb2-83f4-982a5c608bb7.json  2ac1d86e-7327-482e-b128-9adebf402189.json  2e916d85-16ab-4795-9829-10a95a712149.json  35c201cb-cc05-4a64-b87c-157517789bc3.json  392d629a-866e-4cf9-96cb-835b86ed9f08.json  3d0791be-df97-4fa7-843b-a8f8887a23e9.json  41ded8ce-b9a4-4ba5-8b61-c1f5bf654d54.json  47fc936d-b931-4221-a9c1-3a0d095a1e23.json  4c86f2f6-cd8e-4310-b83c-3166a06c9324.json  4c92b654-d46a-4da5-9f10-47d77defaa46.json  5d62f44c-9d44-48bb-95e9-a0f372645a8c.json  64f60be0-106d-4892-930d-6a8d0f6abb53.json  704928d4-979b-455e-83cf-ebeb0f6c5280.json  791d55d5-3627-4b59-900c-66be008fa8d4.json  7c89bad0-5c4b-4b0d-8379-f483d8809c06.json  887552be-ec85-4fd6-895e-b2f9c4ca9aec.json  8b3ef418-e96c-4f1c-87dc-656b99433845.json  90aeb93e-5476-42fc-b639-cee6acafc459.json  92027c0b-a327-4def-b023-3a1345d9ff54.json  9693e34b-af34-400f-b1a8-e8e0487800ef.json  99a72c62-13eb-4e0c-bb35-eb8df64f84dc.json  9e5acfe1-0825-49cf-a705-c166a8bf0001.json  a05714da-c29b-4e0a-9bf5-5e1feaf4a9e3.json  a7153bd1-bc26-4eec-a2b8-bd310886df10.json  a8b06959-7916-4d32-ac2b-77ed27c7e7c6.json  aa202034-5114-4f1b-9e38-4362cf9ab474.json  ad741c01-2c64-400c-86fb-a4500e2db7f5.json  b15b4afd-4370-4eb3-8381-60e1af4d6701.json  c787e675-3f92-4ceb-b419-f7bbbf9f63fa.json  c9b30642-5910-46ae-a4a7-335483681b27.json  df7e52c4-e2a7-449c-9904-08334bcb4376.json  (+6 more)
core/python/context/: __init__.py  cli.py  context.py  executor.py  pruner.py  router.py
core/python/tests/: test_cli.py  test_context.py
core/typescript/: package.json
docs/: api-reference.md  architecture.md  copilot-cli.md  examples.md  getting-started.md  index.md  migration-guide.md  migration.md  reference.md
examples/: README.md
examples/backend-automation/: analysis_context.json  analysis_results.json  backend_example.py
schema/: context.schema.json  request.schema.json  response.schema.json
(+10 files in other folders)
