[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context"
version = "0.1.0"
description = "Lightweight, cross-runtime execution abstraction for LLM requests"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "gitbrainlab", email = "context@gitbrainlab.dev"}
]
keywords = ["llm", "context", "execution", "abstraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/gitbrainlab/context"
Repository = "https://github.com/gitbrainlab/context"
Documentation = "https://github.com/gitbrainlab/context/blob/main/docs"

[tool.setuptools]
packages = ["context"]
